34-move_to pi4j 2 3 0 official (#62)
* 34: partial migration to pi4jv2

* 34: init migration to pi4jv2

* 34: updates and corrections

* 34: additional corrections and cleanups

* 34: serial communication comments